# easl

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  MORNING_REPORT.md  README.md  introduction.md  syntax.md  todo.md  vm_wip_notes.md
data/: accessor.easl  accessor.tynt  address_space.easl  any_and_all.easl  application_in_return.easl  arg_annotation.easl  argument_annotation.easl  argument_metadata.easl  array.easl  array_literal.easl  array_literal_access.easl  associative.easl  attributes.easl  bind_discard.easl  bitcast.easl  block.easl  block.tynt  block_deexpressionify_2.easl  block_in_application.easl  block_in_let.easl  break_in_match.easl  cast.easl  complex_loops.easl  compute.easl  discard.easl  double_monomorphize.easl  dpdx.easl  duplicate_defn.easl  duplicate_field.easl  duplicate_variant.easl  enum.easl  enum_generic_option.easl  equality.easl  equality.tynt  exp_after_control_flow.easl  float_match.easl  flowers.easl  fn_inlining.easl  for_loop.easl  for_loop.tynt  (+78 more)
data/buffer/: abstracted_compute_dispatch.easl  abstracted_compute_dispatch.txt  array_assignment.easl  array_assignment_cross_window.easl  array_assignment_cross_window.txt  bidirectional_transfer.easl  bidirectional_transfer_array.easl  break_in_match.easl  (+23 more)
examples/: vm_run.rs
src/: audio.rs  compiler.rs  format.rs  interpreter.rs  lib.rs  macros.rs  main.rs  parse.rs  simple.tynt  window.rs
tests/: buffer_tests.rs  c_tests.rs  conformance_tests.rs  cpu_tests.rs  full_tests.rs  import_tests.rs  shader_tests.rs  sync_tests.rs  vm_tests.rs  window_tests.rs
tmp/: load_image.easl
(+624 files in other folders)
